--- a/cssお試し専用/homeアニメーション例1/home.html
+++ b/cssお試し専用/homeアニメーション例1/home.html
@@ -7,19 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
+    <header class="line"></header>
     <main>
-        <header class="line">header</header>
-        
-        <script type="text/javascript" src="home.js"></script>
-
-        <div id="grd"></div>
-        <div id="slide">
-            <ul>
-                <li><a href=""><img src="sample01.jpg" alt="" width="640" height="300" /></a></li>
-                <li><a href=""><img src="sample02.jpg" alt="" width="640" height="300" /></a></li>
-                <li><a href=""><img src="sample03.jpg" alt="" width="640" height="300" /></a></li>
-            </ul>
-        </div>
+    
     </main>
     <footer class="line">footer</footer>
 </body>    
